src/test/ui/span/issue-15480.nll.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/issue-15480.rs:5:10
   |
LL |         &id(3)
   |          ^^^^^ creates a temporary which is freed while still in use
LL |     ];
   |      - temporary value is freed at the end of this statement
...
LL |     for &&x in &v {
   |                -- borrow later used here
   |
   = note: consider using a `let` binding to create a longer lived value

error: aborting due to previous error

For more information about this error, try `rustc --explain E0716`.
